Finalize Announcement Banner functionality

--- a/src/components/sections/Contact.astro
+++ b/src/components/sections/Contact.astro
@@ -48,7 +48,7 @@ const convertTo12Hour = (time24: string) => {
     <h3 class="font-bold text-xl md:text-3xl pt-12 tracking-widest">
       Have Any Questions?
     </h3>
-    <h4 class="text-xl md:text-2xl pt-1.5 text-[#452B1F]">
+    <h4 class="text-large md:text-xl pt-1.5 text-[#452B1F]">
       Find out how we can help you!
     </h4>
     <div
