--- a/src/components/sections/Header.astro
+++ b/src/components/sections/Header.astro
@@ -1,7 +1,7 @@
 ---
 interface HeaderProps {
   content: string;
-  isActive: boolean;
+  status: string;
 }
 
 import Announcements from "./Announcements.astro";
@@ -17,21 +17,21 @@ const fetchAnnouncements = async () => {
     const data = await response.json();
 
     if (data && data.length > 0) {
-      const { content, isActive } = data[0]; // Access the first announcement
-      return { content, isActive };
+      const { content, status } = data[0]; // Access the first announcement
+      return { content, status };
     } else {
       console.warn("No announcements found.");
-      return { content: "", isActive: false }; // Default values if no data exists
+      return { content: "", status: "inactive" }; // Default values if no data exists
     }
   } catch (error) {
     console.error("Failed to fetch announcements:", error);
-    return { content: "", isActive: false }; // Default return on error
+    return { content: "", status: "inactive" }; // Default return on error
   }
 };
 
 // Fetch announcements and use the output as props
-const { content, isActive } = (await fetchAnnouncements()) as HeaderProps;
-const activeAnnouncement = isActive;
+const { content, status } = (await fetchAnnouncements()) as HeaderProps;
+const activeAnnouncement = status === "active";
 const body = content;
 ---
 
