--- a/src/components/sections/Footer.astro
+++ b/src/components/sections/Footer.astro
@@ -1,5 +1,5 @@
 ---
-import { officialStoreInfo } from "../../constants/StoreInfo.astro";
+import { officialStoreInfo } from "../../constants/storeInfo";
 
 const name = officialStoreInfo().name;
 const address = officialStoreInfo().address;
