--- a/src/components/sections/Navbar.astro
+++ b/src/components/sections/Navbar.astro
@@ -1,7 +1,7 @@
 ---
 import OpenStatus from "./OpenStatus.astro";
 import Links from "./Links.astro";
-import { officialStoreInfo } from "../../constants/StoreInfo.astro";
+import { officialStoreInfo } from "../../constants/storeInfo";
 
 import phone from "../../assets/phone.png";
 import mapPin from "../../assets/map-pin.png";
