--- a/src/components/sections/Staff.astro
+++ b/src/components/sections/Staff.astro
@@ -1,7 +1,7 @@
 ---
 import StaffCarousel from "../ui/StaffCarousel.tsx";
 
-import { officialStaffList } from "../../constants/StoreInfo.astro";
+import { officialStaffList } from "../../constants/storeInfo.ts";
 
 const defaultStaffList = officialStaffList();
 ---
