--- a/src/components/sections/OpenStatus.astro
+++ b/src/components/sections/OpenStatus.astro
@@ -1,23 +1,24 @@
 ---
-interface OpenStatusProps {
-  storeStatus: string;
-}
-
-import { officialStoreHours } from "../../constants/StoreInfo.astro";
+import { officialStoreHours } from "../../constants/storeInfo.ts";
 import Button from "../ui/Button.astro";
 
-export const getStoreStatus = () => {
-  let storeHours = officialStoreHours();
+export const getStoreStatus = async () => {
+  const storeHours = await officialStoreHours();
+  console.log(storeHours);
+
+  if (!storeHours) {
+    return "Store Hours Unavailable";
+  }
 
   const now = new Date();
 
-  // Get current day in Eastern Time
-  const currentDay = now.toLocaleString("en-US", {
-    timeZone: "America/New_York",
-    weekday: "long",
-  });
+  const currentDay = now
+    .toLocaleString("en-US", {
+      timeZone: "America/New_York",
+      weekday: "long",
+    })
+    .toLowerCase();
 
-  // Get current time in Eastern Time
   const currentTime = now.toLocaleString("en-US", {
     timeZone: "America/New_York",
     hour: "2-digit",
@@ -71,7 +72,7 @@ export const getStoreStatus = () => {
   return null;
 };
 
-const storeStatus = getStoreStatus() as OpenStatusProps["storeStatus"];
+const storeStatus = await getStoreStatus();
 ---
 
 <div class="z-10">
