--- a/src/pages/admin.astro
+++ b/src/pages/admin.astro
@@ -56,7 +56,7 @@ const allTags = await getCollection("blog").then((collection) => {
   <div class="grid grid-cols-1 lg:grid-cols-3 gap-4">
     <div class="lg:col-span-1">
       <UpdateAnnouncement client:load />
-      <UpdateHours storeHours={storeHours ?? {}} />
+      <UpdateHours client:load storeHours={storeHours ?? {}} />
     </div>
 
     <DraftPost allTags={allTags} client:only="react" />
