--- a/src/components/sections/Grooming.astro
+++ b/src/components/sections/Grooming.astro
@@ -1,7 +1,9 @@
-<section id="grooming" class="lg:mx-36 min-h-[700px] -mt-36 pt-48">
-  <h3 class="mx-10 lg:mx-24 pb-6 font-bold text-3xl tracking-widest">
-    Pet Grooming
-  </h3>
+<section id="grooming" class="lg:mx-36 min-h-[700px] -mt-36 mb-12 pt-48">
+  <img
+    src="/src/assets/pet-grooming.webp"
+    alt="Products logo"
+    class="h-[215px] w-auto mx-auto -mt-12"
+  />
   <p class="mx-10 sm:mx-16 md:mx-28 text-[#452B1F]">
     Tortor vulputate netus nam sagittis, imperdiet pharetra porttitor taciti
     maecenas. Metus posuere consectetur non fermentum lacus eget tempor feugiat
