--- a/src/components/sections/Products.astro
+++ b/src/components/sections/Products.astro
@@ -1,7 +1,9 @@
-<section id="products" class="lg:mx-36 py-10 min-h-[700px] -mt-36 pt-48">
-  <h3 class="mx-10 lg:mx-24 pb-6 font-bold text-3xl tracking-widest">
-    Products
-  </h3>
+<section id="products" class="lg:mx-36 py-10 min-h-[700px] -mt-36 pt-44">
+  <img
+    src="/src/assets/products.webp"
+    alt="Products logo"
+    class="h-[215px] w-auto mx-auto"
+  />
   <p class="mx-10 sm:mx-16 md:mx-28 text-[#452B1F]">
     Tortor vulputate netus nam sagittis, imperdiet pharetra porttitor taciti
     maecenas. Metus posuere consectetur non fermentum lacus eget tempor feugiat
