--- a/src/components/sections/Staff.astro
+++ b/src/components/sections/Staff.astro
@@ -8,7 +8,7 @@ const staffList = await officialStaffList();
 
 <section
   id="staff"
-  class="relative pb-10 tracking-wider text-center overflow-hidden -mt-36 pt-48"
+  class="relative pb-10 tracking-wider text-center overflow-hidden -mt-48 mb-8 pt-56"
 >
   <img
     src="src/assets/panel.png"
