--- a/src/components/sections/Blog.astro
+++ b/src/components/sections/Blog.astro
@@ -24,15 +24,15 @@ const uniquePosts = Array.from(new Set(sortedPosts.map((post) => post.slug)))
 const recentPosts = uniquePosts.slice(0, 3);
 ---
 
-<section class="mx-10 py-16 lg:py-24 drop-shadow-2xl">
-  <h3
-    class="text-center mx-auto pb-6 font-bold text-2xl lg:text-3xl tracking-widest"
-  >
-    Recent Blog Posts
-  </h3>
+<section class="mx-10 pt-8 lg: pb-12 lg:pb-16 drop-shadow-2xl">
+  <img
+    src="/src/assets/recent-blog-posts.webp"
+    alt="Products logo"
+    class="h-[215px] w-auto mx-auto -mb-6"
+  />
 
   <div
-    class="grid grid-cols-1 place-items-center gap-4 xl:flex-row xl:mx-24 justify-center items-center py-6"
+    class="grid grid-cols-1 place-items-center gap-4 xl:flex-row xl:mx-24 justify-center items-center pb-10"
   >
     {recentPosts.map((post) => <BlogPostCard post={post} key={post.slug} />)}
   </div>
@@ -44,7 +44,7 @@ const recentPosts = uniquePosts.slice(0, 3);
       transition:animate="slide"
       text="View More Posts"
       href="/blog"
-      class="bg-[#7F0201] hover:bg-[#A52A2A] text-white font-bold py-2 px-4 rounded-xl"
+      class="bg-[#7F0201] hover:bg-[#A52A2A] text-white font-bold py-2 px-4 mb-8 rounded-xl"
       data-astro-prefetch
     />
   </div>
