--- a/src/pages/admin.astro
+++ b/src/pages/admin.astro
@@ -40,45 +40,48 @@ const allTags = await getCollection("blog").then((collection) => {
       &nbsp; Store Page
     </button>
   </div>
-  <div
-    class="flex justify-center font-bold text-md pl-4 pt-4 pb-8 drop-shadow-xl tracking-wide"
-  >
-    <div class="flex items-center text-center bg-[#F9DCB1] p-2 rounded-3xl">
-      <div class="text-xl">🚨</div>
-      <p class="px-2 text-sm sm:text-base">
-        For clarification on any of the website's functionality,
-        <a
-          href="https://docs.samsnug.net"
-          target="_blank"
-          class="max-md:block text-[#7F0201] underline"
-          >consult the documentation</a
-        >
-      </p>
-      <div class="text-xl">🚨</div>
-    </div>
-  </div>
 
-  <div class="grid grid-cols-1 lg:grid-cols-3 gap-4">
-    <div class="lg:col-span-1">
-      <UpdateAnnouncement client:load />
-      <UpdateHours client:load storeHours={storeHours ?? {}} />
-    </div>
-
-    <DraftPost allTags={allTags} client:only="react" />
-  </div>
-
-  <div class="flex flex-col items-center pb-4 mx-auto">
-    <h1 class="font-bold text-2xl pb-2 mx-4">Update Staff Bios</h1>
-    <button
-      id="staff-toggle-button"
-      class="w-36 mb-4 mx-4 px-4 py-2 bg-[#7F0201] hover:bg-[#A52A2A] text-white font-bold rounded-3xl"
+  <div class="xl:mx-10 2xl:mx-20">
+    <div
+      class="flex justify-center font-bold text-md pl-4 pt-4 pb-8 drop-shadow-xl tracking-wide"
     >
-      Show Staff List
-    </button>
-
-    <div id="staff-list-section" class="hidden w-full mx-4">
-      <AdminStaffGrid client:load staffMembers={staffMembers} />
+      <div class="flex items-center text-center bg-[#F9DCB1] p-2 rounded-3xl">
+        <div class="text-xl">🚨</div>
+        <p class="px-2 text-sm sm:text-base">
+          For clarification on any of the website's functionality,
+          <a
+            href="https://docs.samsnug.net"
+            target="_blank"
+            class="max-md:block text-[#7F0201] underline"
+            >consult the documentation</a
+          >
+        </p>
+        <div class="text-xl">🚨</div>
+      </div>
     </div>
+
+    <div class="grid grid-cols-1 lg:grid-cols-3 gap-4">
+      <div class="lg:col-span-1">
+        <UpdateAnnouncement client:load />
+        <UpdateHours client:load storeHours={storeHours ?? {}} />
+      </div>
+
+      <DraftPost allTags={allTags} client:only="react" />
+    </div>
+
+    <!-- <div class="flex flex-col items-center pb-4 mx-auto">
+      <h1 class="font-bold text-2xl pb-2 mx-4">Update Staff Bios</h1>
+      <button
+        id="staff-toggle-button"
+        class="w-36 mb-4 mx-4 px-4 py-2 bg-[#7F0201] hover:bg-[#A52A2A] text-white font-bold rounded-3xl"
+      >
+        Show Staff List
+      </button>
+
+      <div id="staff-list-section" class="hidden w-full mx-4">
+        <AdminStaffGrid client:load staffMembers={staffMembers} />
+      </div>
+    </div> -->
   </div>
 </Layout>
 
