--- a/src/components/sections/Grooming.astro
+++ b/src/components/sections/Grooming.astro
@@ -2,7 +2,7 @@
   <img
     src="/src/assets/pet-grooming.webp"
     alt="Products logo"
-    class="h-[215px] w-auto mx-auto -mt-12"
+    class="h-[150px] md:h-[180px] lg:h-[235px] w-auto mx-auto mb-6"
   />
   <p class="mx-10 sm:mx-16 md:mx-28 text-[#452B1F]">
     Tortor vulputate netus nam sagittis, imperdiet pharetra porttitor taciti
