--- a/src/components/sections/Products.astro
+++ b/src/components/sections/Products.astro
@@ -1,8 +1,8 @@
-<section id="products" class="lg:mx-36 py-10 min-h-[700px] -mt-36 pt-44">
+<section id="products" class="lg:mx-36 min-h-[700px] -mt-36 pt-44">
   <img
     src="/src/assets/products.webp"
     alt="Products logo"
-    class="h-[215px] w-auto mx-auto"
+    class="h-[130px] md:h-[160px] lg:h-[215px] w-auto mx-auto my-6"
   />
   <p class="mx-10 sm:mx-16 md:mx-28 text-[#452B1F]">
     Tortor vulputate netus nam sagittis, imperdiet pharetra porttitor taciti
@@ -33,5 +33,12 @@
       <li>Donec quis dui at dolor tempor interdum.</li>
       <li>Vivamus vestibulum ntulla nec ante.</li>
     </ul>
+  </div>
+  <div class="mx-6">
+    <img
+      src="/src/assets/brass-divider.webp"
+      alt="Brass fixture section divider"
+      class="pt-8 h-[50%] w-auto mx-auto transform -scale-x-100"
+    />
   </div>
 </section>
