--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -3,30 +3,35 @@
   class="relative mx-auto flex flex-col items-center min-h-[400px] h-80 md:h-96"
 >
   <img
+    src="/src/assets/brass-hero-top.webp"
+    alt="Brass fixture section divider"
+    class="absolute top-6 object-cover h-1/3 2xl:h-1/2 w-auto mx-auto"
+  />
+  <img
     src="src/assets/logo.webp"
     alt="PT Pet Supply logo"
-    class="absolute top-0 object-contain h-[280px] md:h-[300px] xl:h-[340px] w-auto p-3 drop-shadow-2xl"
+    class="absolute top-0 object-contain h-[280px] md:h-[300px] xl:h-[340px] 2xl:h-[440px] w-auto p-3 drop-shadow-2xl"
   />
 
   <img
     src="/src/assets/mainecoon.png"
     alt="Maine Coon"
-    class="absolute bottom-0 left-0 -ml-16 sm:-ml-10 md:-ml-28 lg:ml-20 xl:ml-30 2xl:ml-40 min-[1800px]:ml-80 min-[350px]:h-[330px] min-[475px]:h-[370px] md:h-[600px] drop-shadow-2xl w-auto max-h-[700px] object-contain -mb-48 md:-mb-80"
+    class="absolute bottom-0 min-[1350px]:-bottom-12 2xl:-bottom-40 left-0 -ml-16 sm:-ml-10 md:-ml-28 lg:ml-20 xl:ml-30 2xl:ml-40 min-[1800px]:ml-80 min-[350px]:h-[330px] min-[475px]:h-[370px] md:h-[600px] drop-shadow-2xl w-auto max-h-[700px] object-contain -mb-48 md:-mb-80"
   />
   <img
     src="/src/assets/husky.png"
     alt="Siberian Husky"
-    class="absolute bottom-0 right-0 -mr-20 sm:-mr-14 md:-mr-32 lg:mr-14 xl:mr-24 2xl:mr-36 min-[1800px]:mr-72 min-[350px]:h-[330px] min-[475px]:h-[370px] md:h-[600px] drop-shadow-2xl w-auto max-h-[700px] object-contain -mb-48 md:-mb-80"
+    class="absolute bottom-0 min-[1350px]:-bottom-12 2xl:-bottom-40 right-0 -mr-20 sm:-mr-14 md:-mr-32 lg:mr-14 xl:mr-24 2xl:mr-36 min-[1800px]:mr-72 min-[350px]:h-[330px] min-[475px]:h-[370px] md:h-[600px] drop-shadow-2xl w-auto max-h-[700px] object-contain -mb-48 md:-mb-80"
   />
 
   <img
     src="/src/assets/landscape.png"
     alt="Background landscape"
-    class="absolute inset-0 left-1/2 transform -translate-x-1/2 w-full h-full object-cover z-[-2]"
+    class="absolute inset-0 left-1/2 transform -translate-x-1/2 w-full h-full min-[1350px]:h-[450px] 2xl:h-[570px] object-cover z-[-2]"
   />
   <img
     src="/src/assets/fence.png"
     alt="Background picket fence"
-    class="absolute bottom-14 left-1/2 transform -translate-x-1/2 w-full h-[63%] max-w-none object-cover -mb-28 md:-mb-36 z-[-1]"
+    class="absolute bottom-14 2xl:-bottom-4 left-1/2 transform -translate-x-1/2 w-full h-[63%] min-[1350px]:h-[69%] 2xl:h-[95%] max-w-none object-cover -mb-28 md:-mb-36 min-[1350px]:-mb-48 2xl:-mb-72 z-[-1]"
   />
 </section>
