--- a/src/components/sections/Navbar.astro
+++ b/src/components/sections/Navbar.astro
@@ -12,7 +12,7 @@ const address = officialStoreInfo().address;
 ---
 
 <section
-  class="flex w-full min-h-[78px] font-bold mx-auto px-4 xl:px-12 min-[1650px]:px-32 2xl:px-18 pt-2 xl:pt-6 pb-1 xl:pb-5 bg-[#FFC66D]"
+  class="flex w-full min-h-[58px] min-[500px]:min-h-[66px] min-[580px]:min-h-[72px] font-bold mx-auto px-4 xl:px-12 min-[1650px]:px-32 2xl:px-18 pt-2 xl:pt-6 pb-1 xl:pb-5 bg-[#FFC66D]"
 >
   <div
     class="my-auto flex-1 flex items-start xl:items-center text-sm font-bold min-[520px]:text-lg xl:pl-0 pt-1 -mr-10 2xl:ml-16"
