--- a/src/components/sections/Contact.astro
+++ b/src/components/sections/Contact.astro
@@ -59,8 +59,13 @@ const storeHours: StoreHours | null = await officialStoreHours();
     <div class="relative mt-3 text-center">
       <img
         src="/src/assets/message-us.webp"
-        alt="Products logo"
-        class="h-[215px] w-auto mx-auto -mt-6 -mb-14"
+        alt="Message Us sign"
+        class="h-[150px] md:h-[180px] w-auto mx-auto mb-2"
+      />
+      <img
+        src="/src/assets/brass-divider.webp"
+        alt="Brass divider"
+        class="h-[50px] md:h-[70px] w-auto mx-auto transform -scale-x-100"
       />
       <div class="mt-2 py-3">
         <ContactForm client:load />
