--- a/src/components/sections/Products.astro
+++ b/src/components/sections/Products.astro
@@ -36,9 +36,9 @@
   </div>
   <div class="mx-6">
     <img
-      src="/src/assets/brass-divider.webp"
+      src="/src/assets/brass-divider-2.webp"
       alt="Brass fixture section divider"
-      class="pt-8 h-[50%] w-auto mx-auto transform -scale-x-100"
+      class="pt-8 my-6 lg:my-12 h-[50%] w-auto mx-auto transform -scale-x-100"
     />
   </div>
 </section>
