Further styling of reviews and hero section

--- a/src/components/sections/About.astro
+++ b/src/components/sections/About.astro
@@ -1,16 +1,22 @@
----
-
----
-
 <section
   id="about"
-  class="mx-1 sm:mx-14 md:mx-28 lg:mx-64 pt-48 pb-6 text-md md:text-base"
+  class="min-[1536px]:mt-32 mx-10 sm:mx-14 md:mx-28 lg:mx-72 xl:mx-80 2xl:mx-96 min-[1700px]:mx-120 min-[1900px]:mx-144 pt-48 pl-2 pb-6 text-md md:text-base"
 >
-  <p class="ml-8 mr-2 sm:ml-0 sm:mr-0 sm:mx-10 text-[#452B1F]">
-    Lorem ipsum odor amet, consectetuer adipiscing elit. Id tincidunt augue quam
-    adipiscing ante posuere egestas penatibus sollicitudin. Placerat odio
-    suscipit adipiscing pellentesque; himenaeos dapibus egestas vitae? Consequat
-    sagittis cras lacinia, elit laoreet primis turpis sit. Conubia nulla per
-    nascetur luctus laoreet nulla elit est.
+  <p class="text-[#452B1F]">
+    At PT Pet Supply, we've been dedicated to providing healthy, trustworthy
+    products for pets for over 20 years. Our passion-driven business began with
+    a simple vision: to help pet owners give their animals the best care. This
+    love for animals was further deepened when we started volunteering at
+    Siberian Husky Rescue in 2000.
+    <br />
+    <br />
+    Today, we're proud to offer not only quality products but also personalized grooming
+    services and expert advice from our knowledgeable and friendly staff. We're committed
+    to helping you make informed choices for your pet's health and happiness.
+    <br />
+    <br />
+    Thank you for choosing us as your trusted partner in your pet's well-being. We
+    look forward to serving you and your furry companions for many more years to
+    come!
   </p>
 </section>
