--- a/src/components/sections/Blog.astro
+++ b/src/components/sections/Blog.astro
@@ -24,7 +24,7 @@ const uniquePosts = Array.from(new Set(sortedPosts.map((post) => post.slug)))
 const recentPosts = uniquePosts.slice(0, 3);
 ---
 
-<section class="flex-col mx-10 px-4 pt-8 pb-8 lg:pb-16 drop-shadow-2xl">
+<section class="flex-col mx-10 px-4 my-8 lg:my-20 drop-shadow-2xl">
   <div class="left col-1">
     <img
       src="/src/assets/brass-sidebar.webp"
