--- a/src/components/sections/Grooming.astro
+++ b/src/components/sections/Grooming.astro
@@ -1,37 +1,28 @@
-<section id="grooming" class="lg:mx-36 min-h-[700px] -mt-36 mb-12 pt-48">
+<section
+  id="grooming"
+  class="lg:mx-36 min-h-[700px] -mt-36 mb-24 min-[1077px]:mb-48 min-[1298px]:mb-28 pt-44"
+>
   <img
     src="/src/assets/pet-grooming.webp"
     alt="Products logo"
     class="h-[150px] md:h-[180px] lg:h-[235px] w-auto mx-auto mb-6"
   />
   <p class="mx-10 sm:mx-16 md:mx-28 text-[#452B1F]">
-    Tortor vulputate netus nam sagittis, imperdiet pharetra porttitor taciti
-    maecenas. Metus posuere consectetur non fermentum lacus eget tempor feugiat
-    aenean. Lorem feugiat integer purus nullam penatibus faucibus semper
-    ridiculus dui. Dolor blandit laoreet nisi iaculis curae; primis posuere
-    tortor venenatis? Elit praesent tempor dictum fusce amet duis dictumst
-    laoreet tellus. Montes dignissim nam massa quam auctor nisl torquent congue
-    sit. Duis sodales volutpat turpis nostra morbi mus porttitor proin montes?
-    Scelerisque dis elit nostra accumsan viverra auctor dui nascetur congue. Et
-    porttitor eget mi nullam habitant fames odio sociis sed. Nunc velit dictum
-    odio posuere hac senectus posuere lectus nullam?
+    Grooming services typically include a range of treatments to keep pets clean
+    and healthy. <span class="font-bold">Full service baths</span>
+    involve washing and conditioning the pet&#39;s coat, followed by drying.
+    <span class="font-bold">Haircuts</span> are offered for pets needing a trim or
+    specific grooming style. <span class="font-bold">Tidy-ups</span>
+    focus on lighter grooming, such as trimming around the face, paws, or tail. <span
+      class="font-bold">Nail trims</span
+    > or <span class="font-bold">dremmeling</span> are done to maintain healthy nails,
+    with dremmeling being a smoother, more rounded alternative to traditional clipping.
+    These services help maintain a pet’s hygiene, appearance, and comfort.
   </p>
-  <div class="mx-5 pt-10 pb-16">
-    <ul class="grid grid-cols-2 gap-4 text-center text-[#452B1F]">
-      <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
-      <li>Aliquam tincidunt mauris eu risus.</li>
-      <li>Vestibulum auctor dapibus neque.</li>
-      <li>Nunc dignissim risus id metus.</li>
-      <li>Cras ornare tristique elit.</li>
-      <li>Vivamus vestibulum ntulla nec ante.</li>
-      <li>Praesent placerat risus quis eros.</li>
-      <li>Fusce pellentesque suscipit nibh.</li>
-      <li>Integer vitae libero ac risus egestas placerat.</li>
-      <li>Vestibulum commodo felis quis tortor.</li>
-      <li>Ut aliquam sollicitudin leo.</li>
-      <li>Cras iaculis ultricies nulla.</li>
-      <li>Donec quis dui at dolor tempor interdum.</li>
-      <li>Vivamus vestibulum ntulla nec ante.</li>
-    </ul>
-  </div>
+  <p class="mx-24 sm:mx-36 md:mx-48 text-[#452B1F] text-center mt-4 lg:mb-36">
+    Prices vary depending on the breed and size of the dog.
+    <br />
+    <br />
+    Cat nail trims and tidy-ups are also available.
+  </p>
 </section>
