--- a/src/components/sections/Products.astro
+++ b/src/components/sections/Products.astro
@@ -2,7 +2,7 @@
   <img
     src="/src/assets/products.webp"
     alt="Products logo"
-    class="h-[130px] md:h-[160px] lg:h-[215px] w-auto mx-auto my-6"
+    class="h-[130px] md:h-[160px] lg:h-[215px] w-auto mx-auto my-6 md:mt-16"
   />
   <p class="mx-10 sm:mx-16 md:mx-28 text-[#452B1F]">
     Tortor vulputate netus nam sagittis, imperdiet pharetra porttitor taciti
@@ -38,7 +38,7 @@
     <img
       src="/src/assets/divider.webp"
       alt="Brass fixture section divider"
-      class="pt-8 my-6 lg:my-12 h-[30%] w-auto mx-auto transform -scale-x-100"
+      class="pt-3 my-4 lg:my-12 h-[30%] w-auto mx-auto transform -scale-x-100"
     />
   </div>
 </section>
