--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -69,10 +69,13 @@ const formatDate = (date: Date) => {
         class="flex flex-col justify-center text-center w-3/4 md:w-2/3 pt-2 mx-auto"
       >
         <p class="font-bold text-[#452B1F]">
-          Lorem ipsum odor amet, consectetuer adipiscing elit. Iaculis ex nisl
-          himenaeos euismod nostra habitant. Class mattis tortor purus odio
-          nullam bibendum posuere tortor semper. Magna eros ipsum nam accumsan
-          neque tristique.
+          At PT Pet Supply, our mission is to provide pet parents with reliable,
+          natural, and sustainable products that promote the health, happiness,
+          and well-being of their pets. Through this blog, we aim to educate,
+          inspire, and empower pet owners to make informed choices about the
+          products and practices they incorporate into their pets&#39; lives. We
+          are committed to fostering a community that values the importance of
+          nature-based solutions and responsible pet care.
         </p>
         <div class="flex-col pr-4 -mr-4">
           <div class="flex justify-start items-start space-x-1">
