--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -12,16 +12,28 @@
     alt="PT Pet Supply logo"
     class="absolute top-0 object-contain h-[280px] md:h-[300px] xl:h-[340px] 2xl:h-[440px] w-auto p-3 drop-shadow-2xl"
   />
+  <div class="absolute top-60 md:top-64 xl:top-72">
+    <a
+      href="https://www.google.com/maps/place/P+T+Pet+Supply/@42.0714526,-71.8662691,17z/data=!4m6!3m5!1s0x89e41ed7234c136d:0xe30644b400274c0!8m2!3d42.0714526!4d-71.8662691!16s%2Fg%2F1tt1tq6m?entry=ttu&g_ep=EgoyMDI0MTAxNC4wIKXMDSoASAFQAw%3D%3D"
+      target="_blank"
+    >
+      <img
+        src="src/assets/address-sign.webp"
+        alt="Address sign"
+        class="object-contain h-[75px] md:h-[80px] xl:h-[85px] xl:mt-2 2xl:h-[105px] 2xl:mt-24 w-auto p-3 drop-shadow-2xl"
+      />
+    </a>
+  </div>
 
   <img
     src="/src/assets/mainecoon.png"
     alt="Maine Coon"
-    class="absolute bottom-0 min-[1350px]:-bottom-12 2xl:-bottom-40 left-0 -ml-16 sm:-ml-10 md:-ml-28 lg:ml-20 xl:ml-30 2xl:ml-40 min-[1800px]:ml-80 min-[350px]:h-[330px] min-[475px]:h-[370px] md:h-[600px] drop-shadow-2xl w-auto max-h-[700px] object-contain -mb-48 md:-mb-80"
+    class="absolute bottom-0 min-[1350px]:-bottom-12 2xl:-bottom-40 left-0 -ml-16 sm:-ml-10 md:-ml-28 lg:ml-20 xl:ml-30 min-[1800px]:ml-48 min-[350px]:h-[330px] min-[475px]:h-[370px] md:h-[480px] xl:h-[600px] drop-shadow-2xl w-auto max-h-[700px] object-contain -mb-48 md:-mb-80"
   />
   <img
     src="/src/assets/husky.png"
     alt="Siberian Husky"
-    class="absolute bottom-0 min-[1350px]:-bottom-12 2xl:-bottom-40 right-0 -mr-20 sm:-mr-14 md:-mr-32 lg:mr-14 xl:mr-24 2xl:mr-36 min-[1800px]:mr-72 min-[350px]:h-[330px] min-[475px]:h-[370px] md:h-[600px] drop-shadow-2xl w-auto max-h-[700px] object-contain -mb-48 md:-mb-80"
+    class="absolute bottom-0 min-[1350px]:-bottom-12 2xl:-bottom-40 right-0 -mr-20 sm:-mr-14 md:-mr-32 lg:mr-14 xl:mr-30 min-[1800px]:mr-48 min-[350px]:h-[330px] min-[475px]:h-[370px] md:h-[480px] xl:h-[600px] drop-shadow-2xl w-auto max-h-[700px] object-contain -mb-48 md:-mb-80"
   />
 
   <img
