--- a/src/components/ui/GoogleMapsLoader.astro
+++ b/src/components/ui/GoogleMapsLoader.astro
@@ -7,10 +7,13 @@ const { apiKey } = Astro.props;
     return new Promise((resolve, reject) => {
       if (!document.querySelector(`script[src*="maps.googleapis.com"]`)) {
         const script = document.createElement("script");
-        script.src = `https://maps.googleapis.com/maps/api/js?key=${apiKey}&libraries=places,maps,geocoding,marker&loading=async&callback=initMap`;
+        script.src = `https://maps.googleapis.com/maps/api/js?key=${apiKey}&libraries=places,maps,geocoding,marker&callback=initMap&loading=async`;
         script.async = true;
         script.defer = true;
-        script.onload = resolve;
+        script.onload = () => {
+          console.log("Google Maps script loaded");
+          resolve();
+        };
         script.onerror = () => reject("Google Maps script failed to load.");
         document.head.appendChild(script);
       } else {
@@ -20,7 +23,10 @@ const { apiKey } = Astro.props;
   }
 
   if (typeof window !== "undefined") {
-    window.initMap = () => {};
+    window.initMap = () => {
+      console.log("initMap placeholder called");
+    };
+
     loadGoogleMapsScript()
       .then(() => console.log("Google Maps script loaded"))
       .catch((error) => console.error(error));
